--- a/stylesheets/ui_source.less
+++ b/stylesheets/ui_source.less
@@ -438,7 +438,7 @@ th {
     color: @color-front-lesser;
     background-color: @color-form-span-bg;
     text-align: center;
-    text-spacing: 0.1em;
+    letter-spacing: 0.1em;
 }
 table tr:first-child th:first-child {
     -webkit-border-top-left-radius: 5px;
